# NeuroQuantAI-Institutional-Backtesting-Lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: pages.yml  tests.yml
.streamlit/: config.toml
data/samples/: README.md  sample_prices.csv
docs/: analytics_explanation.md  codex_next_steps.md  methodology.md  portfolio_relevance.md
examples/: minimal_backtest.py
sample_outputs/: cost_sensitivity.csv  dashboard.html  equity_curve_sample.csv  feature_sample.csv  parameter_sweep_summary.csv  regime_summary.csv  stress_test_summary.csv  walk_forward_summary.csv
src/neuroquant/: __init__.py  app_helpers.py  backtest.py  costs.py  data.py  features.py  metrics.py  pipeline.py  regime.py  reporting.py  research.py  risk.py  signals.py  sizing.py  stress.py  validation.py  visualization.py
tests/: conftest.py  test_app_helpers.py  test_backtest.py  test_costs.py  test_data.py  test_features.py  test_metrics.py  test_pipeline.py  test_regime.py  test_research.py  test_risk.py  test_signals.py  test_sizing.py  test_streamlit_app.py  test_stress.py  test_validation.py
